// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 or multiple expenses 1`] = `
<div>
  <h5>
    Viewing 
    3
     expenses totalling 
    $5.00
    .
  </h5>
</div>
`;

exports[`should render ExpensesSummary with single expense 1`] = `
<div>
  <h5>
    Viewing 1 expense totalling 
    $6.00
    .
  </h5>
</div>
`;
